// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LeftSideNav.tsx should match snapshot in error state 1`] = `
<DocumentFragment>
  <div
    class="left__side__nav"
    style="left: -100%;"
  >
    <div>
      <div
        class="heading"
      >
        <h6>
          All Boards
        </h6>
        <svg
          aria-hidden="true"
          fill="none"
          height="32"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 4.5v15m7.5-7.5h-15"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </div>
      <div
        class="error"
      >
        <svg
          aria-hidden="true"
          fill="none"
          height="28"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          width="28"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 9v3.75m-9.303 3.376c-.866 1.5.217 3.374 1.948 3.374h14.71c1.73 0 2.813-1.874 1.948-3.374L13.949 3.378c-.866-1.5-3.032-1.5-3.898 0L2.697 16.126zM12 15.75h.007v.008H12v-.008z"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
        <p>
          Something went wrong !
        </p>
      </div>
    </div>
    <div>
      <div
        class="logout__btn"
      >
        <button
          class="button primary "
          style="height: 64px; width: 100%; justify-content: space-between;"
        >
          <h6>
            Logout
          </h6>
          <svg
            aria-hidden="true"
            fill="none"
            height="32"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.75 9V5.25A2.25 2.25 0 0013.5 3h-6a2.25 2.25 0 00-2.25 2.25v13.5A2.25 2.25 0 007.5 21h6a2.25 2.25 0 002.25-2.25V15m3 0l3-3m0 0l-3-3m3 3H9"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </button>
      </div>
      <button
        class="button primary "
        style="height: 64px; width: 100%; justify-content: space-between; z-index: 10;"
      >
        <h6>
          New Board
        </h6>
        <svg
          aria-hidden="true"
          fill="none"
          height="32"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 4.5v15m7.5-7.5h-15"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LeftSideNav.tsx should match snapshot in loading state 1`] = `
<div
  className="left__side__nav"
  style={
    {
      "left": "-100%",
    }
  }
>
  <div>
    <div
      className="heading"
    >
      <h6>
        All Boards
      </h6>
      <svg
        aria-hidden="true"
        fill="none"
        height={32}
        onClick={[Function]}
        stroke="currentColor"
        strokeWidth={2}
        viewBox="0 0 24 24"
        width={32}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 4.5v15m7.5-7.5h-15"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </div>
    <div
      data-testid="skeleton-blocks"
    >
       
      <div
        className="skeleton__block"
        style={
          {
            "height": "30px",
            "width": "200px",
          }
        }
      />
      <div
        className="skeleton__block"
        style={
          {
            "height": "30px",
            "width": "200px",
          }
        }
      />
      <div
        className="skeleton__block"
        style={
          {
            "height": "30px",
            "width": "200px",
          }
        }
      />
      <div
        className="skeleton__block"
        style={
          {
            "height": "30px",
            "width": "200px",
          }
        }
      />
      <div
        className="skeleton__block"
        style={
          {
            "height": "30px",
            "width": "200px",
          }
        }
      />
      <div
        className="skeleton__block"
        style={
          {
            "height": "30px",
            "width": "200px",
          }
        }
      />
    </div>
  </div>
  <div>
    <div
      className="logout__btn"
    >
      <button
        className="button primary "
        onClick={[Function]}
        style={
          {
            "height": "64px",
            "justifyContent": "space-between",
            "width": "100%",
          }
        }
      >
        <h6>
          Logout
        </h6>
        <svg
          aria-hidden="true"
          fill="none"
          height={32}
          stroke="currentColor"
          strokeWidth={2}
          viewBox="0 0 24 24"
          width={32}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.75 9V5.25A2.25 2.25 0 0013.5 3h-6a2.25 2.25 0 00-2.25 2.25v13.5A2.25 2.25 0 007.5 21h6a2.25 2.25 0 002.25-2.25V15m3 0l3-3m0 0l-3-3m3 3H9"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
    <button
      className="button primary "
      style={
        {
          "height": "64px",
          "justifyContent": "space-between",
          "width": "100%",
          "zIndex": 10,
        }
      }
    >
      <h6>
        New Board
      </h6>
      <svg
        aria-hidden="true"
        fill="none"
        height={32}
        stroke="currentColor"
        strokeWidth={2}
        viewBox="0 0 24 24"
        width={32}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 4.5v15m7.5-7.5h-15"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </button>
  </div>
</div>
`;
